@@ -221,7 +221,7 @@ mforest <- function(formula, data, na.action, weights, subset, type = NULL,
   mf$drop.unused.levels <- TRUE
   
   ## call model.frame()
-  mf[[1]] <- as.name("model.frame")
+  mf[[1]] <- quote(stats::model.frame)
   mf <- eval(mf, parent.frame())
   n <- nrow(mf)
   mf0 <- mf[0L, ]
